sdt : new funcs : file_utils_file_exists, fileutils_copy_file_to_fir, dirutils_dir_exists, validate_var_is_true